WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70007
Fails to compile when the JS Debugger is disabled
https://bugs.webkit.org/show_bug.cgi?id=70007
Summary
Fails to compile when the JS Debugger is disabled
Rémi Duraffort
Reported
2011-10-13 01:38:03 PDT
WebKit fails to build when the JavaScript Debugger is disabled. The errors are like the following one (a patch to fix this build failure will follow): ../../Source/WebCore/inspector/InspectorRuntimeAgent.cpp: In member function 'void WebCore::InspectorRuntimeAgent::pauseWorkerContext(WebCore::WorkerContext*)': ../../Source/WebCore/inspector/InspectorRuntimeAgent.cpp:156: error: 'WorkerDebuggerAgent' has not been declared
Attachments
Fix build failure when JS debugger is disabled
(5.25 KB, patch)
2011-10-13 01:41 PDT
,
Rémi Duraffort
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rémi Duraffort
Comment 1
2011-10-13 01:41:21 PDT
Created
attachment 110810
[details]
Fix build failure when JS debugger is disabled
WebKit Review Bot
Comment 2
2011-10-14 01:12:05 PDT
Comment on
attachment 110810
[details]
Fix build failure when JS debugger is disabled Clearing flags on attachment: 110810 Committed
r97449
: <
http://trac.webkit.org/changeset/97449
>
WebKit Review Bot
Comment 3
2011-10-14 01:12:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug