Fix compilation when the JS Debugger is disabled. https://bugs.webkit.org/show_bug.cgi?id=70007

Patch by Rémi Duraffort <remi.duraffort@st.com> on 2011-10-14
Reviewed by Antti Koivisto.

* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::willEvaluateWorkerScript):
* inspector/InspectorRuntimeAgent.cpp:
* inspector/InspectorRuntimeAgent.h:
* inspector/WorkerInspectorController.cpp:
* inspector/WorkerInspectorController.h:
* workers/WorkerMessagingProxy.cpp:
(WebCore::WorkerMessagingProxy::disconnectFromInspector):
(WebCore::WorkerMessagingProxy::sendMessageToInspector):

Canonical link: https://commits.webkit.org/86178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97449 268f45cc-cd09-0410-ab3c-d52691b4dbfc