Source/WebCore/inspector/WorkerInspectorController.h
@@ -66,7 +66,9 @@ public:
     void disconnectFrontend();
     void restoreInspectorStateFromCookie(const String& inspectorCookie);
     void dispatchMessageFromFrontend(const String&);
+#if ENABLE(JAVASCRIPT_DEBUGGER)
     void resume();
+#endif
 
 private:
     friend InstrumentingAgents* instrumentationForWorkerContext(WorkerContext*);
